--- a/Kunskapskontroll_2_Del_G.ipynb
+++ b/Kunskapskontroll_2_Del_G.ipynb
@@ -215,7 +215,7 @@
     "\n",
     "import joblib\n",
     "\n",
-    "# Spara den bästa modellen (t.ex. Random Forest)\n",
+    "# Spara den bästa modellen\n",
     "joblib.dump(rf_clf, 'best_model.joblib')\n",
     "\n",
     "# Ladda modellen senare\n",
